# omics-metadata-json-service

./: .gitignore  LICENSE  pyproject.toml
src/oidx_mds/: app.py  config.py  models.py
terraform/: main.tf  task_queues.tf  terraform.tfvars.example  variables.tf
tests/: test_models.py
